# qdnn

./: .cproject  .project  CMakeLists.txt  README.md  STM32L552ZETX_FLASH.ld  imc_freertos_app_m33.cfg
Core/Inc/: FreeRTOSConfig.h  stm32l5xx_hal_conf.h  stm32l5xx_it.h
Core/Inc/ImC/: ai.h  decoder.h  imc_api.h  imc_kernel.h  new_model.h
Core/Inc/ai/: dacapo.h  input_data.h  model_info.h  model_specs.h  model_weights.h  quant_params.h  simple_model.h
Core/Src/: main.c  stm32l5xx_hal_msp.c  stm32l5xx_hal_timebase_tim.c  stm32l5xx_it.c
Core/Src/ImC/: imc_api.c  imc_kernel.c
Core/Src/ai/: ai.c  input_data.c  simple_model.c
DaCapo/dacapo/CMSIS/Core/Include/: core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm55.h  core_cm7.h
DaCapo/dacapo/CMSIS/DSP/Include/: arm_common_tables.h  arm_math.h  arm_math_types.h
DaCapo/dacapo/CMSIS/DSP/Include/dsp/: transform_functions.h
DaCapo/dacapo/CMSIS/NN/Include/: arm_nnsupportfunctions.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_sc000.h  core_sc300.h
DaCapo/dacapo/core/include/: core.h  model.h  stack.h  utils.h
DaCapo/dacapo/core/src/: core.c  model.c  stack.c  utils.c
DaCapo/dacapo/layers/include/: average_pooling.h  batch_normalization.h  convolution.h  cross_entropy_loss.h  dense.h  depthwise_convolution.h  flatten.h  input.h  relu.h  softmax.h
DaCapo/dacapo/layers/src/: average_pooling.c  batch_normalization.c  convolution.c  cross_entropy_loss.c  dense.c  depthwise_convolution.c  flatten.c  input.c  relu.c  softmax.c
config_default/: CMakeCache.txt  Makefile  cmake_install.cmake  imc_example
scripts/: nvm_reset.elf  program_binary.sh
